About Malmöscenen page, scroll down fix on small screen

--- a/public/sites/all/themes/scen/scss/elements/page/_about-malmoscenen.scss
+++ b/public/sites/all/themes/scen/scss/elements/page/_about-malmoscenen.scss
@@ -19,6 +19,8 @@
   background: white;
   padding: 100px;
   z-index: 2;
+  max-height: 80%;
+  overflow: auto;
 
   display: none;
 }
